Improve descriptions to use ToString()

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -90,16 +90,16 @@ CONTRACT_GROUP
 		requiredValue = false
 
 		// Stock Values
-		FlyingHigh		= Round(HomeWorld().FlyingAltitudeThreshold() / 1000.0)
-		SpaceLow		= Round(HomeWorld().AtmosphereAltitude() / 1000.0)
-		SpaceHigh		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0)
+		FlyingHigh		= Round(HomeWorld().FlyingAltitudeThreshold() / 1000.0, 1.0)
+		SpaceLow		= Round(HomeWorld().AtmosphereAltitude() / 1000.0, 1.0)
+		SpaceHigh		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0, 1.0)
 
 		// Identifiers
 		// This is all rough, not based on reality
-		TroposphereLow		= Round(@FlyingHigh * 0.1389, 0.5)
-		TroposphereHigh		= Round(@FlyingHigh * 0.2778, 0.5)
-		StratosphereLow		= Round(@FlyingHigh * 0.4000, 0.5)
-		StratosphereHigh	= Round(@FlyingHigh * 0.7000, 0.5)
+		TroposphereLow		= Round(@FlyingHigh * 0.1389, 1.0)
+		TroposphereHigh		= Round(@FlyingHigh * 0.2778, 1.0)
+		StratosphereLow		= Round(@FlyingHigh * 0.4000, 1.0)
+		StratosphereHigh	= Round(@FlyingHigh * 0.7000, 1.0)
 		
 		MesosphereLow		= @FlyingHigh
 		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.1944, 5.0) + @FlyingHigh
