--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -34,13 +34,6 @@ CONTRACT_TYPE
 
 	}
 
-	DATA
-	{
-		type = double
-		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
-		ScaledAltMin = Round(@/AltMin / 1000.0)
-		title = Minimum altitude
-	}
 
 	DATA
 	{
@@ -52,7 +45,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = "@/ScaledAltMin.Print() km"
+		PrettyAltMin = @/AltMin.ToString("#,#,,# km")
 		title = Minimum altitude
 	}
 
