--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -34,13 +34,6 @@ CONTRACT_TYPE
 
 	}
 
-	DATA
-	{
-		type = double
-		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
-		ScaledAltMin = Round(@/AltMin / 1000.0)
-		title = Minimum altitude
-	}
 
 	DATA
 	{
@@ -52,17 +45,10 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = "@/ScaledAltMin.Print() km"
+		PrettyAltMin = @/AltMin.ToString("#,#,,# km")
 		title = Minimum altitude
 	}
 
-	DATA
-	{
-		type = double
-		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
-		ScaledAltMax = Round(@/AltMax / 1000.0)
-		title = Maximum altitude
-	}
 
 	DATA
 	{
@@ -74,7 +60,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMax = "@/ScaledAltMax.Print() km"
+		PrettyAltMax = @/AltMax.ToString("#,#,,# km")
 		title = Maximum altitude
 	}
 
@@ -85,13 +71,6 @@ CONTRACT_TYPE
 		title = Range for altitude 
 	}
 
-	DATA
-	{
-		type = double
-		Speed = Round(100 * 1.0)
-		ScaledSpeed = Round(@/Speed / 1.0)
-		title = Speed
-	}
 
 	DATA
 	{
@@ -103,7 +82,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettySpeed = "@/ScaledSpeed.Print() m/s"
+		PrettySpeed = @/Speed.ToString("#,# m/s")
 		title = Speed
 	}
 
