--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -42,13 +42,6 @@ CONTRACT_TYPE
 
 	}
 
-	DATA
-	{
-		type = double
-		Distance = Round(@KPlanes:ShortHop * 1000.0)
-		ScaledDistance = Round(@/Distance / 1000.0)
-		title = Distance
-	}
 
 	DATA
 	{
@@ -60,7 +53,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyDistance = "@/ScaledDistance.Print() km"
+		PrettyDistance = @/Distance.ToString("#,#,,# km")
 		title = Distance
 	}
 
