--- a/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
@@ -32,13 +32,6 @@ CONTRACT_TYPE
 
 	}
 
-	DATA
-	{
-		type = double
-		Distance = Round(@KPlanes:Continental * 1000.0)
-		ScaledDistance = Round(@/Distance / 1000.0)
-		title = Distance
-	}
 
 	DATA
 	{
@@ -50,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyDistance = "@/ScaledDistance.Print() km"
+		PrettyDistance = @/Distance.ToString("#,#,,# km")
 		title = Distance
 	}
 
