--- a/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
@@ -32,13 +32,6 @@ CONTRACT_TYPE
 
 	}
 
-	DATA
-	{
-		type = double
-		AltMin = Round(1 * 1000.0)
-		ScaledAltMin = Round(@/AltMin / 1000.0)
-		title = Minimum altitude
-	}
 
 	DATA
 	{
@@ -50,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = "@/ScaledAltMin.Print() km"
+		PrettyAltMin = @/AltMin.ToString("#,#,,# km")
 		title = Minimum altitude
 	}
 
