Fix scaling, not quite right.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -34,6 +34,12 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
+		title = Minimum altitude
+	}
 
 	DATA
 	{
@@ -45,7 +51,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = @/AltMin.ToString("#,#,,# km")
+		PrettyAltMin = Round(@/AltMin / 1000.0).ToString("#,# km")
 		title = Minimum altitude
 	}
 
