--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -34,6 +34,12 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
+		title = Minimum altitude
+	}
 
 	DATA
 	{
@@ -45,10 +51,16 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = @/AltMin.ToString("#,#,,# km")
+		PrettyAltMin = Round(@/AltMin / 1000.0).ToString("#,# km")
 		title = Minimum altitude
 	}
 
+	DATA
+	{
+		type = double
+		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
+		title = Maximum altitude
+	}
 
 	DATA
 	{
@@ -60,7 +72,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMax = @/AltMax.ToString("#,#,,# km")
+		PrettyAltMax = Round(@/AltMax / 1000.0).ToString("#,# km")
 		title = Maximum altitude
 	}
 
@@ -71,6 +83,12 @@ CONTRACT_TYPE
 		title = Range for altitude 
 	}
 
+	DATA
+	{
+		type = double
+		Speed = Round(100 * 1.0)
+		title = Speed
+	}
 
 	DATA
 	{
@@ -82,7 +100,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettySpeed = @/Speed.ToString("#,# m/s")
+		PrettySpeed = Round(@/Speed / 1.0).ToString("#,# m/s")
 		title = Speed
 	}
 
