--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -42,6 +42,12 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		Distance = Round(@KPlanes:ShortHop * 1000.0)
+		title = Distance
+	}
 
 	DATA
 	{
@@ -53,7 +59,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyDistance = @/Distance.ToString("#,#,,# km")
+		PrettyDistance = Round(@/Distance / 1000.0).ToString("#,# km")
 		title = Distance
 	}
 
