--- a/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
@@ -32,6 +32,12 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		AltMin = Round(1 * 1000.0)
+		title = Minimum altitude
+	}
 
 	DATA
 	{
@@ -43,7 +49,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = @/AltMin.ToString("#,#,,# km")
+		PrettyAltMin = Round(@/AltMin / 1000.0).ToString("#,# km")
 		title = Minimum altitude
 	}
 
