--- a/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
@@ -32,6 +32,12 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		Distance = Round(@KPlanes:Continental * 1000.0)
+		title = Distance
+	}
 
 	DATA
 	{
@@ -43,7 +49,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyDistance = @/Distance.ToString("#,#,,# km")
+		PrettyDistance = Round(@/Distance / 1000.0).ToString("#,# km")
 		title = Distance
 	}
 
