Fix scaling issues (try again).

--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -38,6 +38,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
+            ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
 
@@ -51,7 +52,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = Round(@/AltMin / 1000.0).ToString("#,# km")
+		PrettyAltMin = @/ScaledAltMin.ToString("#,# km")
 		title = Minimum altitude
 	}
 
@@ -59,6 +60,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
+            ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
 
@@ -72,7 +74,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMax = Round(@/AltMax / 1000.0).ToString("#,# km")
+		PrettyAltMax = @/ScaledAltMax.ToString("#,# km")
 		title = Maximum altitude
 	}
 
@@ -87,6 +89,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		Speed = Round(100 * 1.0)
+            ScaledSpeed = Round(@/Speed / 1.0)
 		title = Speed
 	}
 
@@ -100,7 +103,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettySpeed = Round(@/Speed / 1.0).ToString("#,# m/s")
+		PrettySpeed = @/ScaledSpeed.ToString("#,# m/s")
 		title = Speed
 	}
 
