--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -46,6 +46,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		Distance = Round(@KPlanes:ShortHop * 1000.0)
+            ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
 
@@ -59,7 +60,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyDistance = Round(@/Distance / 1000.0).ToString("#,# km")
+		PrettyDistance = @/ScaledDistance.ToString("#,# km")
 		title = Distance
 	}
 
