--- a/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereHigh.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereHigh.cfg
@@ -38,6 +38,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		AltMin = Round(@KPlanes:TroposphereHigh * 1000.0)
+            ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
 
@@ -51,7 +52,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = Round(@/AltMin / 1000.0).ToString("#,# km")
+		PrettyAltMin = @/ScaledAltMin.ToString("#,# km")
 		title = Minimum altitude
 	}
 
