--- a/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
@@ -36,6 +36,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		Distance = Round(@KPlanes:Continental * 1000.0)
+            ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
 
@@ -49,7 +50,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyDistance = Round(@/Distance / 1000.0).ToString("#,# km")
+		PrettyDistance = @/ScaledDistance.ToString("#,# km")
 		title = Distance
 	}
 
