--- a/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
@@ -36,6 +36,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		AltMin = Round(1 * 1000.0)
+            ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
 
@@ -49,7 +50,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = Round(@/AltMin / 1000.0).ToString("#,# km")
+		PrettyAltMin = @/ScaledAltMin.ToString("#,# km")
 		title = Minimum altitude
 	}
 
