Second pass at "Early" group. Looks much better now.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
@@ -36,7 +36,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		Distance = Round(@KPlanes:Continental * 1000.0)
-            ScaledDistance = Round(@/Distance / 1000.0)
+		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
 
@@ -59,6 +59,28 @@ CONTRACT_TYPE
 		type = string
 		PrettyDistanceRange = distance of at least @/PrettyDistance@/DescDistance
 		title = Range for distance 
+	}
+
+	DATA
+	{
+		type = double
+		MarkerDistance = Round(@KPlanes:Continental * 1000.0) / 2.0
+		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		DescMarkerDistance = ""
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		PrettyMarkerDistance = @/ScaledMarkerDistance.ToString("#,# km")
+		title = Distance
 	}
 
 //CONTRACT DESCRIPTION
@@ -256,8 +278,8 @@ BEHAVIOUR
         altitude = 0.0
         waterAllowed = true
 	    nearIndex = 0
-        minDistance = @/Distance / 2.0
-        maxDistance = @/Distance / 2.0
+        minDistance = @/MarkerDistance
+        maxDistance = @/MarkerDistance
     }
 }
 
@@ -266,7 +288,7 @@ BEHAVIOUR
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyDistance from KSC
+		title = fly to waypoint "Distance Marker" which is @/PrettyMarkerDistance from KSC
 
 		vessel = @/craft
 
