--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -39,8 +39,8 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel @/PrettyDistanceRange.
-		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel to the half-way distance marker at @/PrettyDistanceRange and return back to the KSC.
-		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel to half-way distance marker at @/PrettyDistanceRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel to the half-way distance marker at @/PrettyMarkerDistance and return back to the KSC.
+		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first.
 		#autoLOC_KPlanes_Start_006_ShortHop_completedMessage = Wow, we did not know people wanted to travel so far from home. Perhaps we can make money from taking people to other places?
 
@@ -54,8 +54,8 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_008_DomesticDistance_title = Travel @/PrettyDistanceRange
-		#autoLOC_KPlanes_Start_008_DomesticDistance_description = Passengers want to go further, perhaps to the sea side or some other city. Travel to the half-way distance marker at @/PrettyDistanceRange and return to the KSC.
-		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel to half-way distance marker at @/PrettyDistanceRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_008_DomesticDistance_description = Passengers want to go further, perhaps to the sea side or some other city. Travel to the half-way distance marker at @/PrettyMarkerDistance and return to the KSC.
+		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_008_DomesticDistance_notes = You're gonna need a bigger plane (and fuel tanks).
 		#autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage = Phew, that was a long way. Next time pack some entertainment, or perhaps look into autopilots.
 
@@ -68,8 +68,8 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_title = Long haul flights of @/PrettyDistanceRange
-		#autoLOC_KPlanes_Start_010_ContinentalDistance_description = Travelling across continents might be useful for flying back our intrepid astronauts, or for business people who simply have to be there. Travel to the half-way distance marker at @/PrettyDistanceRange and return to the KSC.
-		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyDistanceRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_description = Travelling across continents might be useful for flying back our intrepid astronauts, or for business people who simply have to be there. Travel to the half-way distance marker at @/PrettyMarkerDistance and return to the KSC.
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_notes = Fuel in wings? Fuel under wings? Drop fuel from wings? So much fuel!
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_completedMessage = So far! Definitely need to invest in in-flight entertainment systems.
 
@@ -82,8 +82,8 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_title = Extreme long distance flights of @/PrettyDistanceRange
-		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_description = Holiday seem popular, but for some reason they are more appealing if they are on a different continent. The only problem is that these are quite far away. Having enough fuel and patience to last the distance will be challenge. Travel to the half-way distance marker at @/PrettyDistanceRange and return to the KSC.
-		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyDistanceRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_description = Holiday seem popular, but for some reason they are more appealing if they are on a different continent. The only problem is that these are quite far away. Having enough fuel and patience to last the distance will be challenge. Travel to the half-way distance marker at @/PrettyMarkerDistance and return to the KSC.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_notes = Your plane may well be made entirely of fuel tanks. Bigger wings, bigger engines, bigger landing legs, bigger budgets.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
 	}
