--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -102,10 +102,10 @@ CONTRACT_GROUP
 		StratosphereHigh	= Round(@FlyingHigh * 0.7000, 1.0)
 		
 		MesosphereLow		= @FlyingHigh
-		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.1944, 5.0) + @FlyingHigh
-		ThermosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.3990, 5.0) + @FlyingHigh
+		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.1944 + @FlyingHigh, 5.0) 
+		ThermosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.3990 + @FlyingHigh, 5.0) 
 
-		SpaceLEO		= Round((@SpaceHigh - @SpaceLow)  * 0.1265, 10.0) + @SpaceLow
+		SpaceLEO		= Round((@SpaceHigh - @SpaceLow)  * 0.1265 + @SpaceLow, 10.0) 
 		SpaceMEO		= @SpaceHigh
 		// SpaceGEO		= <<Compute using Orbit Generator>>
 	}
