--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -46,7 +46,7 @@ CONTRACT_TYPE
 	{
 		type = double
 		Distance = Round(@KPlanes:ShortHop * 1000.0)
-            ScaledDistance = Round(@/Distance / 1000.0)
+		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
 
@@ -69,6 +69,28 @@ CONTRACT_TYPE
 		type = string
 		PrettyDistanceRange = distance of at least @/PrettyDistance@/DescDistance
 		title = Range for distance 
+	}
+
+	DATA
+	{
+		type = double
+		MarkerDistance = Round(@KPlanes:ShortHop * 1000.0) / 2.0
+		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		DescMarkerDistance = ""
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		PrettyMarkerDistance = @/ScaledMarkerDistance.ToString("#,# km")
+		title = Distance
 	}
 
 //CONTRACT DESCRIPTION
@@ -266,8 +288,8 @@ BEHAVIOUR
         altitude = 0.0
         waterAllowed = true
 	    nearIndex = 0
-        minDistance = @/Distance / 2.0
-        maxDistance = @/Distance / 2.0
+        minDistance = @/MarkerDistance
+        maxDistance = @/MarkerDistance
     }
 }
 
@@ -276,7 +298,7 @@ BEHAVIOUR
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyDistance from KSC
+		title = fly to waypoint "Distance Marker" which is @/PrettyMarkerDistance from KSC
 
 		vessel = @/craft
 
