--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -37,28 +37,6 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
-		ScaledAltMin = Round(@/AltMin / 1000.0)
-		title = Minimum altitude
-	}
-
-	DATA
-	{
-		type = string
-		DescAltMin = " (Troposphere Low)"
-		title = Minimum altitude
-	}
-
-	DATA
-	{
-		type = string
-		PrettyAltMin = @/ScaledAltMin.ToString("#,# km")
-		title = Minimum altitude
-	}
-
-	DATA
-	{
-		type = double
 		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
@@ -81,7 +59,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude between @/PrettyAltMin@/DescAltMin and @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude of at most @/PrettyAltMax@/DescAltMax
 		title = Range for altitude 
 	}
 
@@ -294,7 +272,7 @@ CONTRACT_TYPE
 		{
 			name = VesselParameterGroup
 			type = VesselParameterGroup
-			title = fly @/PrettyAltRange
+			title = fly at an @/PrettyAltRange
 	
 			vessel = @/craft
 	
@@ -305,7 +283,6 @@ CONTRACT_TYPE
 	
 				targetBody = HomeWorld()
 				situation = FLYING
-				minAltitude = @/AltMin
 				maxAltitude = @/AltMax
 	
 				disableOnStateChange = false
