--- a/GameData/ContractPacks/KPlanes/Groups/Start/009-AirspeedRecord.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/009-AirspeedRecord.cfg
@@ -59,7 +59,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
+		AltMax = Round(@KPlanes:StratosphereLow * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -67,7 +67,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Troposphere High)"
+		DescAltMax = " (Stratosphere Low)"
 		title = Maximum altitude
 	}
 
@@ -294,7 +294,7 @@ CONTRACT_TYPE
 		{
 			name = VesselParameterGroup
 			type = VesselParameterGroup
-			title = fly @/PrettyAltRange
+			title = fly at an @/PrettyAltRange
 	
 			vessel = @/craft
 	
