--- a/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
@@ -35,6 +35,35 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
+		AltMax = Round(@KPlanes:StratosphereLow * 1000.0)
+		ScaledAltMax = Round(@/AltMax / 1000.0)
+		title = Maximum altitude
+	}
+
+	DATA
+	{
+		type = string
+		DescAltMax = " (Stratosphere Low)"
+		title = Maximum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMax = @/ScaledAltMax.ToString("#,# km")
+		title = Maximum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltRange = altitude of at most @/PrettyAltMax@/DescAltMax
+		title = Range for altitude 
+	}
+
+	DATA
+	{
+		type = double
 		Distance = Round(@KPlanes:Continental * 1000.0)
 		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
@@ -284,6 +313,35 @@ BEHAVIOUR
 }
 
 //Contract Goals
+		PARAMETER
+		{
+			name = VesselParameterGroup
+			type = VesselParameterGroup
+			title = fly at an @/PrettyAltRange
+	
+			vessel = @/craft
+	
+			PARAMETER
+			{
+				name = ReachState
+				type = ReachState
+	
+				targetBody = HomeWorld()
+				situation = FLYING
+				maxAltitude = @/AltMax
+	
+				disableOnStateChange = false
+				hideChildren = true
+				hidden = true
+	
+			}
+	
+			completeInSequence = false
+			disableOnStateChange = false
+			hideChildren = true
+	
+		}
+	
 	PARAMETER
 	{
 		name = VesselParameterGroup
