--- a/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereHigh.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereHigh.cfg
@@ -237,7 +237,7 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly up to @/PrettyAltMin
+		title = fly at an @/PrettyAltRange
 
 		vessel = @/craft
 
