--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -86,5 +86,61 @@ Localization
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_notes = Your plane may well be made entirely of fuel tanks. Bigger wings, bigger engines, bigger landing legs, bigger budgets.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
+
+		// ================================================================================
+		#autoLOC_KPlanes_Early_001_StratosphereLow_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_001_StratosphereLow_description = Inigma Kerman wants you to design and fly an aircraft capable of operating at an @/PrettyAltRange. He says that such an accomplishment will make future air travel safer since most of the serious weather only happens below this altitude. He says that if pilots could simply fly over bad weather rather than through it, it would unlock a large number of regional and possibly global air travel possibilities.
+		#autoLOC_KPlanes_Early_001_StratosphereLow_synopsis = Simply launch an airplane from the runway, fly up to an @/PrettyAltRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Early_001_StratosphereLow_notes = Enjoy the view, as at this altitude the clouds (if any are seen today) will mostly be below your aircraft!
+		#autoLOC_KPlanes_Early_001_StratosphereLow_completedMessage = You did it! An @/PrettyAltRange reached, and your pilot snapped a great picture!\n\nWhile your pilot rests up at the Astronaut Complex, be sure to check in with Gene at Mission Control for another opportunity if interested.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_002_Mach1_title = Achieve an airspeed of @/PrettySpeed.
+		#autoLOC_KPlanes_Early_002_Mach1_description = Our aerospace chief scientist Mach Kerman, and KSP retired test pilot Yeager Kerman, want to push us toward developing a spaceplane. But before this can happen, Inigma Kerman says they need to master supersonic flight, and to do this, he is asking your organization to design a plane that can break through the sound barrier in level flight @/PrettyAltRange.\n\nAlthough not required to complete this challenge, Mach Kerman believes that if you design an airplane to use one of the new liquid fueled rocket engines being developed for use by the space program, might make this attempt easier to accomplish.
+		#autoLOC_KPlanes_Early_002_Mach1_synopsis = Launch an airplane from the runway, fly with an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land back at KSC safely.
+		#autoLOC_KPlanes_Early_002_Mach1_notes = No one has ever gone faster than the speed of sound before, so most scientists and engineers are at a loss as to give you any useful advice. Even if they could, they're afraid you'd be traveling to fast to hear it anyways.
+		#autoLOC_KPlanes_Early_002_Mach1_completedMessage = You have broken the sound barrier and achieved the amazing speed of Mach 1! Don't worry, we're sure it can be fixed back up in a jiffy for the next guy!
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_description = Maculator Kerman has another challenge for you, this time one that could very well unlock opportunities for regular global air travel - achieve a flying @/PrettyAltRange. He says accomplishing such a flying altitude will prove that even the highest mountains can be flown over, which would unlock nearly any destination by air!
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_notes = Enjoy the view, as at this altitude the curvature of the planet will be clearly visible!
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_completedMessage = You did it! An @/PrettyAltRange\n\nA number of opportunities have opened up now that global air travel is just on the horizon of possibility. Check back in with Mission Control for a new contract opportunities!
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_004_Mach2_title = Achieve an airspeed of @/PrettySpeed.
+		#autoLOC_KPlanes_Early_004_Mach2_description = Mach Kerman believes with current liquid-fueled rocket technology, that it's possible to exceed Mach 2, which is twice the speed of sound. Doing so would bring us another step closer to spaceplane development. He wants you to take an airplane to an @/PrettyAltRange and see if you can exceed @/PrettySpeed safely in level controlled flight.
+		#autoLOC_KPlanes_Early_004_Mach2_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land back at KSC safely.
+		#autoLOC_KPlanes_Early_004_Mach2_notes = Going Mach 1 was cool. Going Mach 2 will be even cooler. Unfortunately, scientists at KSC predict it will also lead to twice the number of required autographs when you get back.
+		#autoLOC_KPlanes_Early_004_Mach2_completedMessage = Wow! You did it! You reached Mach 2, and came back safely!\n\nInigma passed your flight data to Gene Kerman at the Kerbal Space Program, and Gene says he's very proud of your accomplishments, and that he's very glad to have you working together.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_007_MesosphereLow_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_007_MesosphereLow_description = The Kerbal Space Program have selected your organization to receive special funding to design and fly an aircraft that will reach the upper atmospheric height of @/PrettyAltRange. Inigma Kerman explains that accomplishing this feat will open up the exciting frontier of spaceplane development!
+		#autoLOC_KPlanes_Early_007_MesosphereLow_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Early_007_MesosphereLow_notes = Enjoy the view, as at this altitude you will feel as if you are touching the very boundary of space!
+		#autoLOC_KPlanes_Early_007_MesosphereLow_completedMessage = You did it! Reaching the dizzy heights at an @/PrettyAltRange. The air was really thin up there, wasn't it? No worries, we have fresh air back at Mission Control.\n\nGreat job! The Spaceplane Frontier is opened!
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_008_Mach3_title = Achieve an airspeed of @/PrettySpeed.
+		#autoLOC_KPlanes_Early_008_Mach3_description = Gene Kerman wants us to develop supersonic aircraft for use by the space program. Inigma Kerman wants to use this as an opportunity to take another step toward the development of a spaceplane, and impress Gene with another success. Therefore, Inigma is asking your organization to attempt a supersonic test flight exceeding Mach 3 by taking an airplane to an @/PrettyAltRange and exceeding @/PrettySpeed in a level, and controlled flight. Mach Kerman has informed us that this is not going to be easy as thermal effects are expected at this speed, but everyone believes achieving this milestone necessary for the development of a spaceplane which will need to fly far faster than Mach 3 to be successful.
+		#autoLOC_KPlanes_Early_008_Mach3_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land back at KSC safely.
+		#autoLOC_KPlanes_Early_008_Mach3_notes = Mach 3 is definitely not cool. IN fact, it's the threshold of the flames of fire. The aerodynamic forces attacking your plane will be relentless, and unforgiving. Send a brave pilot who you know will keep his cool in flight.
+		#autoLOC_KPlanes_Early_008_Mach3_completedMessage = Incredible! You have achieved Mach 3!\n\nInigma Kerman says this flight brings the spaceplane program one crucial step toward reality, and also comes with some significant funds from the Kerbal Space Program who will benefit from your flight data.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_description = The Kerbal Space Program wants us to be the first to develop a spaceplane for use in its space program. Inigma Kerman already had you on speed dial, and is currently asking your organization to lead this cutting edge effort.\n\nInigma says that you will need to develop a spaceplane - one that will be able to fly to the highest reaches of the atmosphere, and land on the ground safely. It's not that hard to say that an @/PrettyAltRange is a mere skip away from space. He says the Kerbal Space Program has already given authorization to make this a suborbital flight if desired - assuming you can engineer your spaceplane to do so, but it's not required to complete the mission.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_synopsis = Simply launch a spaceplane from the runway and fly to an @/PrettyAltRange and then land your spaceplane anywhere on the ground safely. You may use an air-breathing engine, or liquid fueled engine, or both.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_notes = High above the ground, where space meets the air, and the stars beckon, will you realize that the universe is at your fingertips. That is, if Kerbals even have fingers other than their thumbs.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_completedMessage = Your spaceplane mission was a success! Mission Control erupted in celebration when you flew at @/PrettyAltMax, and again when you landed. There are compliments all around, and your organization has been honored with a fairly large reward.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_012_Mach4_title = Achieve an airspeed of @/PrettySpeed.
+		#autoLOC_KPlanes_Early_012_Mach4_description = Gene Kerman wants to see if your organization can pull off the final leg of the air speed program, and gather data for aircraft thermal effects and handling of an aircraft at high supersonic speed. What speed? Mach 4. Inigma Kerman told Gene that us that we can do it. He wants you to take up this final airspeed challenge and see if you can get an aircraft to achieve @/PrettySpeed flying at an @/PrettyAltRange, in level flight. If it can be done, then it opens the door to developing a spaceplane prototype in the near future.
+		#autoLOC_KPlanes_Early_012_Mach4_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land and stop anywhere safely.
+		#autoLOC_KPlanes_Early_012_Mach4_notes = Four times the speed of sound doesn't sound...er seem that much more than three times the speed of sound. That is, unless you're a meteor, which at some point in this mission someone on the ground might mistake you for one. Good luck!
+		#autoLOC_KPlanes_Early_012_Mach4_completedMessage = Congratulations! You have achieved Mach 4!\n\nGene says the Kerbal Space Program and its affiliates are serious about reaching space via a spaceplane, and will look to your organization to make it happen soon.
 	}
 }
