--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -192,7 +192,7 @@ CONTRACT_TYPE
 		{
 			name = All
 			type = All
-			title = have an air breathing engine only
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -243,7 +243,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any solid rocket fuel
 
-				resource = SolidFuel				
+				resource = SolidFuel
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
@@ -258,7 +258,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any oxidizer
 
-				resource = Oxidizer				
+				resource = Oxidizer
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
