--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -178,7 +178,7 @@ CONTRACT_TYPE
 		{
 			name = All
 			type = All
-			title = have an air breathing engine only
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -229,7 +229,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any solid rocket fuel
 
-				resource = SolidFuel				
+				resource = SolidFuel
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
@@ -244,7 +244,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any oxidizer
 
-				resource = Oxidizer				
+				resource = Oxidizer
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
