--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -208,7 +208,7 @@ CONTRACT_TYPE
 		{
 			name = All
 			type = All
-			title = have an air breathing engine only
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -259,7 +259,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any solid rocket fuel
 
-				resource = SolidFuel				
+				resource = SolidFuel
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
@@ -274,7 +274,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any oxidizer
 
-				resource = Oxidizer				
+				resource = Oxidizer
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
