--- a/GameData/ContractPacks/KPlanes/Groups/Start/009-AirspeedRecord.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/009-AirspeedRecord.cfg
@@ -200,7 +200,7 @@ CONTRACT_TYPE
 		{
 			name = All
 			type = All
-			title = have an air breathing engine only
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -251,7 +251,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any solid rocket fuel
 
-				resource = SolidFuel				
+				resource = SolidFuel
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
@@ -266,7 +266,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any oxidizer
 
-				resource = Oxidizer				
+				resource = Oxidizer
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
