--- a/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/010-ContinentalDistance.cfg
@@ -198,7 +198,7 @@ CONTRACT_TYPE
 		{
 			name = All
 			type = All
-			title = have an air breathing engine only
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -249,7 +249,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any solid rocket fuel
 
-				resource = SolidFuel				
+				resource = SolidFuel
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
@@ -264,7 +264,7 @@ CONTRACT_TYPE
 				type = HasResource
 				title = not have any oxidizer
 
-				resource = Oxidizer				
+				resource = Oxidizer
 				minQuantity = 0.0
 				maxQuantity = 0.0
 
